<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pixelate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="newImageOnClick"
        android:text="@string/new_button"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorLight"
        android:onClick="saveOnClick"
        android:text="@string/save_button"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/pixelate_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pixel_size_layout" />

    <LinearLayout
        android:id="@+id/pixel_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pixel_size_bar"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pixel_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:text="@string/pixel_size_text"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/pixel_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="number"
            android:text="@string/default_pixel_size"
            android:textColor="@color/colorDark" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/pixel_size_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/new_button"
        android:progressTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimaryDark" />

</RelativeLayout>